Fixed the add icon movement when deleting a question

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <button
             class="btnn"
             id="moveUpButton"
-            onclick="deleteQuestion(this); moveUp()"
+            onclick="deleteQuestion(this);"
           >
             <img src="images/bin.png" alt="" width="20px" height="20px" />
           </button>
